# matrix-llm-bot

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  sqlx-data.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20240409154350_add_rooms.sql
scripts/: init_db.sh
src/bot/: auth.rs  configuration.rs  lib.rs  listeners.rs  main.rs  startup.rs  telemetry.rs  utils.rs  virto.md
src/bot/domain/: initiative.rs  mod.rs  room.rs
src/bot/routes/: health_check.rs  initiative.rs  mod.rs  rooms.rs
src/client_ollama/: Cargo.toml  lib.rs
